Getting rid of wbem (no longer used), updating the blockpage templaye, right aligning textfields.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@17339 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/skins/hippies/css/admin.css
+++ b/uvm-lib/servlets/webui/root/skins/hippies/css/admin.css
@@ -513,3 +513,9 @@ div.iconArrowDown {
   line-height: 14px; /* works out to 14px */
   font-family:arial,helvetica,"FreeSans","Utkal","Nimbus Sans L","Malayalam","Phetsarath OT","Garuda",clean,sans-serif;
  }
+
+.wizard .x-form-item label
+{ 
+  text-align: right;
+ }
+
